# hic_resolution_rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_zh.md  calculate_map_resolution.sh
.github/workflows/: release.yml
benches/: benchmark.rs
examples/: chrom.size
src/: cli.rs  coverage.rs  filter.rs  lib.rs  main.rs  parser.rs  resolution.rs  straw.rs  utils.rs
